# automation-Infra

./: Makefile  README.md  ansible.cfg  inventory.yml.example
cicd-templates/: CONFIGURATION_GUIDE.md  OVERVIEW.md  README.md  configure-secrets.sh  github-secrets-configuration.md  setup.sh  show-summary.sh  validate-secrets.sh
cicd-templates/.github/workflows/: docker.yml  dotnet.yml  full-pipeline.yml  golang.yml  helm-deploy.yml  kubernetes-deploy.yml  nodejs.yml  python.yml  rust.yml
cicd-templates/docs/: MAIN_DOCKER_DEPLOY_CONFIG.md  MAIN_DOTNET_DEPLOY_CONFIG.md  MAIN_GO_DEPLOY_CONFIG.md  MAIN_NODEJS_DEPLOY_CONFIG.md  MAIN_PYTHON_DEPLOY_CONFIG.md  MAIN_RUST_DEPLOY_CONFIG.md  README.md  getting-started.md  kubernetes-quick-reference.md
cicd-templates/examples/: README.md  dotnet-webapi.md  kubernetes-deployments.md  main-docker-deploy.yml  main-dotnet-deploy.yml  main-go-deploy.yml  main-nodejs-deploy.yml  main-python-deploy.yml  main-rust-deploy.yml
cicd-templates/helm-charts/app-template/: Chart.yaml  values.yaml
harbor/: README.md  backup-harbor.yml  deploy-harbor.sh  install-harbor.yml  manage-harbor.yml  vars.yml  vault.yml  vault.yml.example  verify-harbor.yml
harbor/tasks/: generate-ssl-certs.yml  install-docker-compose.yml  install-docker.yml
harbor/templates/: daemon.json.j2  harbor-backup.sh.j2  harbor-logrotate.j2  harbor-restore.sh.j2  harbor-start.sh.j2  harbor-stop.sh.j2  harbor.service.j2  harbor.yml.j2
jfrog/: README.md  deploy-artifactory-enhanced.sh  deploy-artifactory.sh  install-artifactory.yml  show-automation.sh  vars.yml  vault.yml  vault.yml.example  verify-artifactory.yml
jfrog/handlers/: main.yml
jfrog/tasks/: configure-admin.yml  create-artifactory-user.yml  generate-ssl-certs.yml  health-check.yml  install-artifactory.yml  install-java.yml  start-service.yml  verify-database.yml  wait-for-service.yml
jfrog/templates/: artifactory-admin-password.sh.j2  artifactory-backup.sh.j2  artifactory-restore.sh.j2  artifactory.default.j2  artifactory.logrotate.j2  artifactory.service.j2  db.properties.j2  system.yaml.j2
kubernetes/: README.md  deploy-kubernetes.sh  vars.yml  vault.yml  vault.yml.example
kubernetes/group_vars/: all.yml
kubernetes/stage1-preparation/: 01-setup-haproxy.yml  02-prepare-nodes.yml
kubernetes/stage2-cluster/: 01-init-first-master.yml  02-join-masters.yml  03-join-workers.yml  04-verify-cluster.yml  kubeconfig
kubernetes/stage3-services/: 01-install-essentials.yml
kubernetes/templates/: haproxy.cfg.j2  kubeadm-config.yml.j2  kubelet-extra-args.conf.j2
minio/: README.md  deploy-minio.sh  install-minio.yml  vars.yml  vault.yml  vault.yml.example  verify-minio.yml
minio/templates/: minio-backup.sh.j2  minio-health-check.sh.j2  minio.env.j2  minio.logrotate.j2  minio.service.j2
openspec/changes/fix-deprecated-components/: summary.md  (+2 more)
postgres/: README.md  deploy-postgresql.sh  install-postgresql.yml  maintenance-postgresql.yml  vars.yml  vault.yml.example  verify-postgresql.yml
postgres/templates/: pg_hba.conf.j2  postgresql.conf.j2
qemu-agent/: deploy-qemu-guest-agent.sh  install-qemu-guest-agent.yml  verify-qemu-guest-agent.yml
redis/: README.md  deploy-redis.sh  install-redis-stack.yml  install-redis.yml  vars.yml  vault.yml  vault.yml.example  verify-redis-stack.yml  verify-redis.yml
redis/templates/: redis-stack.conf.j2  redis.conf.j2
template-repos/: README.md
template-repos/docker-template/: .dive-ci.yml  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.dev.template  Dockerfile.template  Makefile  README.md  container-structure-test.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  template.config.example
template-repos/dotnet-template/: .editorconfig  .gitignore  README.md  code-analysis.ruleset  stylecop.json
template-repos/go-template/: .gitignore  .golangci.yml  Makefile  README.md  go.mod
template-repos/nodejs-template/: .eslintrc.js  .gitignore  .prettierrc  README.md  package.json  tsconfig.json
template-repos/python-template/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
template-repos/python-template/scripts/: check-all.sh  format.sh  generate-structure.sh  lint.sh  security-check.sh  setup-cicd.sh  setup.sh  test.sh
template-repos/rust-template/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml
template-repos/rust-template/benches/: benchmark.rs
template-repos/rust-template/scripts/: build.sh  check-all.sh  format.sh  lint.sh  security-check.sh  setup-cicd.sh  setup.sh  test.sh
template-repos/rust-template/src/: config.rs  error.rs  lib.rs  utils.rs
(+51 files in other folders)
