[workspace]
members = [
    ".",
]

[package]
name = "project-name"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal Rust project template"
license = "MIT"
repository = "https://github.com/your-org/project-name"
documentation = "https://docs.rs/project-name"
homepage = "https://github.com/your-org/project-name"
readme = "README.md"
keywords = ["rust", "template", "boilerplate"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
mockall = "0.11"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
split-debuginfo = "unpacked"

[profile.test]
debug = true